# docs/swagger.json
@@ -437,7 +437,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Payment"
+                    "Credit"
                 ],
                 "summary": "Получение расписания платежей",
                 "responses": {
@@ -903,18 +903,8 @@
         },
         "model.CreateCreditApplicationV1Request": {
             "type": "object",
-            "required": [
-                "end_date",
-                "interest_rate",
-                "requested_amount",
-                "start_date"
-            ],
             "properties": {
                 "description": {
-                    "type": "string",
-                    "maxLength": 500
-                },
-                "end_date": {
                     "type": "string"
                 },
                 "interest_rate": {
@@ -922,9 +912,6 @@
                 },
                 "requested_amount": {
                     "type": "integer"
-                },
-                "start_date": {
-                    "type": "string"
                 }
             }
         },
@@ -1273,9 +1260,6 @@
             "properties": {
                 "approved_amount": {
                     "type": "integer"
-                },
-                "decision_date": {
-                    "type": "string"
                 },
                 "decision_notes": {
                     "type": "string"
